// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ListItem correctly "DRAFT" item 1`] = `
<div
  className="fdk-list-item d-flex"
>
  <Link
    className="w-100"
    replace={false}
    to="/catalogs/123/datasets/1"
  >
    <div
      className="d-flex justify-content-between"
    >
      <span
        className="w-75 fdk-text-size-small"
      >
        Test item
      </span>
      <span
        className="d-flex w-25"
      >
        <span>
          <i
            className="fa fa-circle fdk-color3 mr-2"
          />
          <span>
            Utkast
          </span>
        </span>
      </span>
    </div>
  </Link>
</div>
`;

exports[`should render ListItem correctly "PUBLISH" item 1`] = `
<div
  className="fdk-list-item d-flex"
>
  <Link
    className="w-100"
    replace={false}
    to="/catalogs/123/datasets/1"
  >
    <div
      className="d-flex justify-content-between"
    >
      <span
        className="w-75 fdk-text-size-small"
      >
        Test item
      </span>
      <span
        className="d-flex w-25"
      >
        <span>
          <i
            className="fa fa-circle fdk-color-cta mr-2"
          />
          <span>
            Publisert
          </span>
        </span>
      </span>
    </div>
  </Link>
</div>
`;

exports[`should render ListItem correctly when missing title 1`] = `
<div
  className="fdk-list-item d-flex"
>
  <Link
    className="w-100"
    replace={false}
    to="/catalogs/123/datasets/1"
  >
    <div
      className="d-flex justify-content-between"
    >
      <span
        className="w-75 fdk-text-size-small fdk-color2"
      >
        Mangler tittel
      </span>
      <span
        className="d-flex w-25"
      >
        <span>
          <i
            className="fa fa-circle fdk-color3 mr-2"
          />
          <span>
            Utkast
          </span>
        </span>
      </span>
    </div>
  </Link>
</div>
`;

exports[`should render ListItem correctly with no props 1`] = `""`;
